# ymprint

./: README.md  TODO.md  Untitled.xcf  docstyles.py  doctablestyles.py  doctemplate.py  example_doc.yml  example_style.yml  pyproject.toml  tablestyle.yml
.github/workflows/: bunny_publish_docs.yml  uv_publish.yml
Examples/Document Configuration/: report.yaml  report.yml
Examples/Document variables/: report.yml
Examples/PDF Backgrounds/: report.yml
Examples/Simple example/: report.yml
Examples/YMPrint blocks/: extra_vars.json  report.yml
docs/: README.md  conf.py  examples.md  index.md  installation.md  quickstart.md  requirements.txt
docs/_static/: custom.css  lightbox.js
docs/guide/: configuration.md  document-structure.md  pdf-backgrounds.md  variables.md
docs/reference/: blocks.md  cli.md  fonts.md
src/yamlreports/: __init__.py  content_checks.py  content_converters.py  context_builder.py  converters.py  notes.yml  report_reader.py  yaml_loader.py
src/yamlreports/blocks/: __init__.py  admonition_block.py  hrule_block.py  image_block.py  page_break_block.py  quote_block.py  spacer_block.py
src/ymprint/: __init__.py  content_checks.py  content_converters.py  context_builder.py  exceptions.py  report_reader.py  story_builder.py  yaml_loader.py
src/ymprint/cli/: main.py  (+3 more)
tests/: demo_file.txt  example_report.py  styles.py  test_blocks.py  test_content_checks.py  test_content_converters.py  test_context_builder.py  test_loadconfig.py  test_pdf_postprocessing.py  test_report_reader.py  throbber.py
tests/test-data/: doctemplate.yml  example_doc.yml  example_style.yml  report.yml  report_example_1.yml  report_example_2.yml  report_example_3.yml  tablestyle.yml  tablestyles.yml  test_pdf_postprocessing.py  textstyles.yml
(+43 files in other folders)
