[project]
name = "yamlreports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connorferster@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "reportlab>=4.5.1",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
yamlreports = "yamlreports:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
