[project]
name = "ymprint"
version = "0.1.0"
description = "Desktop publishing in YAML with Python"
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connor@structuralpython.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "reportlab>=4.5.1",
    "ruamel-yaml>=0.19.1",
    "typer>=0.26.7",
]

[project.scripts]
ym = "ymprint.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "rich>=15.0.0",
]
